--- a/wp-content/themes/badinz/css/styles.css
+++ b/wp-content/themes/badinz/css/styles.css
@@ -10,6 +10,10 @@ body, html {
 }
 ::-moz-selection { background: #272a2d; background:rgba(32,42,45,0.2); }
 ::selection {background: #272a2d; background:rgba(32,42,45,0.2);}
+img {
+    image-rendering: auto;
+    -ms-interpolation-mode:bicubic;
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Cairo', Verdana, sans-serif;
     font-weight:300;
@@ -53,6 +57,7 @@ a, button, img, input, textarea {
 }
 a, a:focus, a:active {
     color: #2b5baf;
+    font-weight: bold;
     border-bottom:1px solid transparent;
     padding:0;
     margin:0;
@@ -260,6 +265,55 @@ hr {
     text-align: right;
     margin:0 !important;
 }
+.footer-social #social-menu {
+    margin:0;
+    padding:0 20px 10px;
+}
+.footer-social #social-menu li {
+    display: inline-block;
+    margin-left:15px;
+}
+.footer-social a {
+    font-size: 0;
+    padding:0 0 10px;
+    color:#fff;
+    border:none;
+    opacity: 0.6;
+}
+.footer-social #social-menu li a:hover {
+    border:none;
+    color:#fff;
+    opacity: 1;
+}
+
+.footer-social a::after {
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    font-size: 30px;
+}
+.footer-social .footer-linkedin a::after {
+    content: '\f0e1';
+}
+.footer-social .footer-facebook a::after {
+    content: '\f09a'
+}
+.footer-social .footer-twitter a::after {
+    content: '\f099';
+}
+.footer-social .footer-instagram a::after {
+    content: '\f16d';
+}
+.footer-social .footer-github a::after {
+    content: '\f09b';
+}
+.footer-social .footer-behance a::after {
+    content: '\f1b4';
+}
+.footer-social .footer-dribbble a::after {
+    content: '\f17d';
+}
 .nav-menu {
     display: block;
     text-align: right;
@@ -283,6 +337,7 @@ a.custom-logo-link, a.custom-logo-link:hover, a.custom-logo-link:focus, a.custom
 .main-navigation li a {
     padding:40px 20px 20px;
     font-size: 16px;
+    font-weight: normal;
     margin:0 10px;
     color:#fff;
     text-decoration: none;
@@ -676,6 +731,7 @@ a.video-button > i {
 
 .button {
     font-size: 16px;
+    font-weight: normal;
     font-family: 'Nunito Sans', Roboto, Arial, sans-serif;
     padding:8px 20px;
     text-align: center;
@@ -735,10 +791,10 @@ a.video-button > i {
     margin-right:15px;
 }
 .circle-arrow::after {
-    content: '\27F6';
+    content: '\2192';
     position: absolute;
     font-size:24px;
-    left:-50%;
+    left:-30%;
     top:-20%;
     -webkit-transition: left 0.3s;
     -moz-transition: left 0.3s;
@@ -750,10 +806,11 @@ a.video-button > i {
     left:30%;
 }
 .partners-features {
-    padding-left:0px;
+    padding-left:0;
+    cursor: default;
 }
 .partners-features:hover .circle-arrow::after {
-    left:30%;
+    left:50%;
 }
 #mapline1, #mapline2 {
     stroke-dasharray: 400px;
@@ -1107,4 +1164,24 @@ footer.comment-meta {
 }
 .wpforms-submit-container {
     text-align: right;
+}
+a.back-top {
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    transform: rotate(270deg);
+    float:right;
+    border:none;
+    margin-top:40px;
+}
+a.back-top:hover {
+    border: none;
+}
+.back-top:after {
+    content: '';
+    position: relative;
+    display: block;
+    clear: both;
+    float: none;
 }
