--- a/wp-content/themes/badinz/css/media.css
+++ b/wp-content/themes/badinz/css/media.css
@@ -185,5 +185,9 @@
       font-size: 26px;
       margin-bottom: 20px;
     }
+    .error-404 .page-title {
+      margin: 40px 0 10px;
+      font-size: 30px;
+    }
 
 }
