--- a/wp-content/themes/badinz/css/styles.css
+++ b/wp-content/themes/badinz/css/styles.css
@@ -354,22 +354,26 @@ a.custom-logo-link, a.custom-logo-link:hover, a.custom-logo-link:focus, a.custom
 .main-navigation a+a {
     margin-right:0;
 }
-.site-header.solid-color {
+.site-header.solid-color,
+.error404 .site-header {
     background-color: #ffffff;
     border:none;
     -webkit-box-shadow: inset 0 -1px 0 rgba(37,48,104,0.1);
     -moz-box-shadow: inset 0 -1px 0 rgba(37,48,104,0.1);
     box-shadow:  inset 0 -1px 0 rgba(37,48,104,0.1);
 }
-.solid-color .main-navigation a {
+.solid-color .main-navigation a,
+.error404 .main-navigation a {
     color: #253068;
 }
-.solid-color .main-navigation a:hover {
+.solid-color .main-navigation a:hover,
+.error404 .main-navigation a:hover {
     -webkit-box-shadow: inset 0 -3px 0 #253068;
     -moz-box-shadow: inset 0 -3px 0 #253068;
     box-shadow: inset 0 -3px 0 #253068;
 }
-.solid-color .custom-logo .cls-1 {
+.solid-color .custom-logo .cls-1,
+.error404 .custom-logo .cls-1 {
     fill:#253068;
 }
 .main-menu {
@@ -1152,6 +1156,16 @@ footer.comment-meta {
 .service-primary:hover .service-primary-inner {
     opacity:0;
 }
+
+.error-404 .page-header {
+  margin-top: 130px;
+  border-bottom: 0;
+}
+.error-404 .page-title {
+  margin: 40px 0;
+  font-size: 60px;
+}
+
 .left-side {
     text-align: right;
     padding-top:5%;
